# dist.-bank

./: .gitignore  CMakeLists.txt  README.md  SPEC.md
src/server/: access.h  compat.h  deserializer.h  include.h  main.cc  serdes.h  serializer.h  traits.h
src/server/core/: accounts.cc  accounts.h  currency.h
src/server/qt/: datapanel.cc  datapanel.h  include.h  mainwindow.cc  mainwindow.h  rpcpanel.cc  rpcpanel.h
src/server/rpc/: protocol.h  request.h  response.h
src/server/server/: controller.cc  controller.h  server.cc  server.h
